// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`review.by.guard-peer.acceptance given: [case-seam-findings] guard peer runs review.by --for term-application, code is term-dirty when: [t0] the stone is passed → the peer bites, the guard rejects off a raw base review, attempt 1 then: the captured peer artifact is stable (full snapshot) 1`] = `
"├─ stdout
│  ├─
│  │
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │  
│  │  🦉 let's review
│  │     ├─ brain: fireworks/deepseek/v4-flash
│  │     ├─ focus: push
│  │     └─ scope
│  │        └─ paths: src/**/*.ts
│  │  
│  │  🦉 needs your talons
│  │  
│  │  🔍 review
│  │     ├─ review: .reviews/by=learner/rubric=term-application.md
│  │     └─ summary
│  │        ├─ 1 blocker 🔴
│  │        └─ 0 nitpicks
│  │
│  └─
├─ stderr
│  ├─
│  │
│  │  
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │     └─ ✋ blocked by constraints
│  │  
│  │
│  └─
└─ passage blocked
   ├─ blocked by constraints
   └─ exit code: 2 ✋
└─ tallied
   ├─ 1 blocker
   └─ 0 nitpicks"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-findings] guard peer runs review.by --for term-application, code is term-dirty when: [t0] the stone is passed → the peer bites, the guard rejects off a raw base review, attempt 1 then: the guard-tree stdout is stable (full snapshot) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: term-application (l1, 1/3)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-application.md
   │   └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-application.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: term-application (l1, 1/3)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-application.md
      │       └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-application.md
      └─ judges
          └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-malfunction] guard peer runs review.by --for with an unknown brain when: [t0] the stone is passed → the peer review faults, the guard blocks on a malfunction then: the captured peer artifact is stable (full snapshot) 1`] = `
"├─ stdout
│  ├─
│  │
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │
│  └─
├─ stderr
│  ├─
│  │
│  │  
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │     └─ 💥 failed with an error
│  │  
│  │
│  └─
└─ passage blocked
   ├─ blocked by malfunction
   └─ exit code: 1 💥"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-malfunction] guard peer runs review.by --for with an unknown brain when: [t0] the stone is passed → the peer review faults, the guard blocks on a malfunction then: the guard-tree stdout is stable (full snapshot) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: term-aggregation (l1, 1/3)
   │   ├─ malfunction 💥
   │   ├─ terminal — does not block higher levels
   │   ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-aggregation.md
   │   └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-aggregation.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ overrule the malfunction
   │  │  └─ rhx route.stone.set --stone 1.execute --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: term-aggregation (l1, 0/3)
      │       ├─ malfunction 💥
      │       ├─ terminal — does not block higher levels
      │       ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-aggregation.md
      │       └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-aggregation.md
      └─ judges
          └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
              └─ finished [TIME] ✓
"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-pass-aggregation] guard peer runs review.by --for term-aggregation, code is clean when: [t0] the stone is passed → the guard approves off a raw base review, attempt 1 then: the captured peer artifact is stable (full snapshot) 1`] = `
"├─ stdout
│  ├─
│  │
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │  
│  │  🦉 let's review
│  │     ├─ brain: fireworks/deepseek/v4-flash
│  │     ├─ focus: push
│  │     └─ scope
│  │        └─ paths: src/**/*.ts
│  │  
│  │  🦉 not even a vole
│  │  
│  │  🔍 review
│  │     ├─ review: .reviews/by=learner/rubric=term-aggregation.md
│  │     └─ summary
│  │        ├─ 0 blockers
│  │        ├─ 0 nitpicks
│  │        └─ all good 👍
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-pass-aggregation] guard peer runs review.by --for term-aggregation, code is clean when: [t0] the stone is passed → the guard approves off a raw base review, attempt 1 then: the guard-tree stdout is stable (full snapshot) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: term-aggregation (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-aggregation.md
   │   └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-aggregation.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: term-aggregation (l1, 1/3)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-aggregation.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-aggregation.md
   │  └─ judges
   │      └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-pass-application] guard peer runs review.by --for term-application, code is clean when: [t0] the stone is passed → the guard approves off a raw base review, attempt 1 then: the captured peer artifact is stable (full snapshot) 1`] = `
"├─ stdout
│  ├─
│  │
│  │  🪨 run solid skill repo=bhrain/role=learner/skill=review.by
│  │  
│  │  🦉 let's review
│  │     ├─ brain: fireworks/deepseek/v4-flash
│  │     ├─ focus: push
│  │     └─ scope
│  │        └─ paths: src/**/*.ts
│  │  
│  │  🦉 not even a vole
│  │  
│  │  🔍 review
│  │     ├─ review: .reviews/by=learner/rubric=term-application.md
│  │     └─ summary
│  │        ├─ 0 blockers
│  │        ├─ 0 nitpicks
│  │        └─ all good 👍
│  │
│  └─
├─ stderr
│  ├─
│  │
│  └─
└─ tallied
   ├─ 0 blockers
   └─ 0 nitpicks"
`;

exports[`review.by.guard-peer.acceptance given: [case-seam-pass-application] guard peer runs review.by --for term-application, code is clean when: [t0] the stone is passed → the guard approves off a raw base review, attempt 1 then: the guard-tree stdout is stable (full snapshot) 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: term-application (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-application.md
   │   └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-application.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: term-application (l1, 1/3)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.given.by_peer.term-application.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i[N].[HASH].r[N]._.taken.by_self.term-application.md
   │  └─ judges
   │      └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
